# swordfish

Snakemake/: Snakefile  primer3_config
search_primer/: Cargo.toml  config
search_primer/src/: counting_bloomfilter_util.rs  lib.rs  main.rs  sequence_encoder_util.rs
search_primer_and_probe/: .gitignore  Cargo.toml
search_primer_and_probe/src/: counting_bloomfilter_util.rs  main.rs  sequence_encoder_util.rs
search_probe/: Cargo.toml
search_probe/src/: find_taqman_probe.rs  lib.rs  main.rs  sequence_encoder_util.rs
util/: .gitignore  blast_precheck_result_analysis.py  blast_result_analysis.py  chose_represantive.py  combine_survivors.py  discard_trapped_primers.py  make_controlled_sequence.py  primer3_result_parser.py  primer_alignment_results_parser.py  random_fasta_generator.py  redesign_primers_with_probe.py  reduce_similar_primers.py
